--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.18.2",
     "firebase": "^10.7.1",
     "firebase-admin": "^12.0.0",
+    "firebase-functions": "^4.6.0",
     "formidable": "^3.5.1",
     "ws": "^8.16.0"
   }
